<resources>
    <string name="app_name">Group3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="none"></string>
    <string name="pagoda">pagoda</string>
    <string name="scene">scene</string>
    <string name="restaurant">restaurant</string>
    <string name="atm">atm</string>
    <string name="fuel">fuel</string>
    <string name="name">Name</string>
</resources>
